backend setup completed

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,9 @@ PORT=5001
 
 JWT_SECRET=myscretkey
 
+NODE_ENV=development
+
+CLOUDINAR_CLOUD_NAME=djeknuqdt
+CLOUDINAR_API_KEY=741173571454164
+CLOUDINARY_API_SECRET=_LSGpuLh79YQXQtozI3QEXYY90s
 # 8yFuv3yGAXmkjHYt
