--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://tejassalunke8788:8yFuv3yGAXmkjHYt@cluster0.pf8w6jt.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0;
+MONGODB_URI="mongodb+srv://tejassalunke8788:EON2Xh7Z8zLqLpkA@cluster0.pf8w6jt.mongodb.net/chat_db"
 
 PORT=5001
 
